# cppbackend-november

./: .gitignore
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/examples/boost_log/: main.cpp
sprint2/examples/boost_log/build_debug/: conanbuildinfo.cmake  conanbuildinfo.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_handler.h  aux.cpp  boost_json.cpp  game_server.h  http_server.cpp  json_loader.cpp  json_loader.h  logger.cpp  main.cpp  model.cpp  model.h  request_handler.cpp  tagged.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  Dockerfile.txt  conanfile.txt
sprint3/problems/gen_objects/solution/app/: conanfile.txt
sprint3/problems/gen_objects/solution/src/: main.cpp
sprint3/problems/gen_objects/solution/src/Application/: application.cpp  player.h  tokens.cpp
sprint3/problems/gen_objects/solution/src/ApplicationLayer/application/: application.h  game_session.h  player.h
sprint3/problems/gen_objects/solution/src/InterLayer/command/: command.h
sprint3/problems/gen_objects/solution/src/InterLayer/error/: error_handler.h
sprint3/problems/gen_objects/solution/src/InterLayer/json/: json_handler.cpp  json_handler.h
sprint3/problems/gen_objects/solution/src/InterLayer/other/: utils.h
sprint3/problems/gen_objects/solution/src/Logic/: error_handler.cpp  file_system.cpp  json_loader.cpp  logging_handler.cpp  ticker.h  utils.cpp
sprint3/problems/gen_objects/solution/src/Model/: game.h  lost_obj.h  map.cpp  road_layout.cpp  typedef.h
sprint3/problems/gen_objects/solution/src/ModelLayer/model/: dog.cpp  dog.h
sprint3/problems/gen_objects/solution/src/Server/: api_request_handler_proxy.h  http_server.cpp  request_handler.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/src/: main.cpp
sprint3/problems/static_lib/solution/src/Application/: application.cpp  application.h  game_session.cpp  game_session.h  player.cpp  tokens.h
sprint3/problems/static_lib/solution/src/ApplicationLayer/application/: player.h
sprint3/problems/static_lib/solution/src/ApplicationLayer/auth/: tokens.cpp
sprint3/problems/static_lib/solution/src/InterLayer/command/: command.h
sprint3/problems/static_lib/solution/src/InterLayer/json/: json_handler.cpp  json_loader.cpp
sprint3/problems/static_lib/solution/src/InterLayer/logger/: logging_handler.h
sprint3/problems/static_lib/solution/src/InterLayer/other/: utils.h
sprint3/problems/static_lib/solution/src/Logic/: file_system.h  json_handler.cpp  logger.cpp  logging_handler.h  ticker.cpp
sprint3/problems/static_lib/solution/src/Logic/json/: json_handler.h  json_loader.h
sprint3/problems/static_lib/solution/src/Model/: constdef.h  dog.cpp  dog.h  game.cpp  game.h  lost_obj.cpp  lost_obj.h  map.cpp  map.h  road.h  road_layout.cpp  road_layout.h  typedef.cpp  typedef.h
sprint3/problems/static_lib/solution/src/ModelLayer/model/: dog.cpp  dog.h  map.h
sprint3/problems/static_lib/solution/src/Server/: api_request_handler_proxy.h  http_server.h  request_handler_unit.h  static_file_request_handler.h  static_file_request_handler_proxy.h
sprint3/problems/static_lib/solution/src/ServerLayer/request/: api_request_handler.h  request_handler.h
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  Dockerfile.txt  conanfile.txt
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/src/: main.cpp
sprint4/problems/leave_game/solution/src/Application/: application.cpp  application.h  game_session.cpp  game_session.h  player.cpp  player.h  player_data_record.h  tokens.cpp  tokens.h
sprint4/problems/leave_game/solution/src/ApplicationLayer/application/: application.cpp  game_session.h
sprint4/problems/leave_game/solution/src/InterLayer/command/: command.cpp  command.h
sprint4/problems/leave_game/solution/src/InterLayer/file_system/: file_system.cpp
sprint4/problems/leave_game/solution/src/InterLayer/json/: json_handler.h
sprint4/problems/leave_game/solution/src/InterLayer/serialization/: game_session_serialize.h  lo_serialize.h  player_serialize.cpp
sprint4/problems/leave_game/solution/src/Logic/: command.cpp  command.h  connection_pool.h  dog_serialize.cpp  dog_serialize.h  error_handler.cpp  file_system.cpp  game_session_serialize.cpp  game_session_serialize.h  json_handler.cpp  json_handler.h  json_loader.cpp  json_loader.h  lo_serialize.cpp  logging_handler.h  player_serialize.h  postgres.cpp  postgres.h  tag_invoke_handler.h  tagged.h  ticker.cpp  ticker.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h  utils.cpp
sprint4/problems/leave_game/solution/src/Model/: collision_detector.cpp  collision_detector.h  dog.cpp  dog.h  dog_gather.cpp  dog_gather.h  geom.h  loot_generator.cpp  lost_obj.cpp  lost_obj.h  map.cpp  road.cpp  road.h  road_layout.cpp  road_layout.h  typedef.h
sprint4/problems/leave_game/solution/src/ModelLayer/gather/: dog_gather.cpp
sprint4/problems/leave_game/solution/src/ModelLayer/type_const_defines/: constdef.h  typedef.h
sprint4/problems/leave_game/solution/src/Server/: api_request_handler.h  api_request_handler_proxy.h  http_server.cpp  http_server.h  request_handler.h  request_handler_unit.h  static_file_request_handler.h  static_file_request_handler_proxy.h
sprint4/problems/leave_game/solution/src/ServerLayer/request/: api_request_handler_proxy.h
sprint4/problems/leave_game/solution/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp
(+314 files in other folders)
